@@ -118,6 +118,8 @@ while (<IN>) {
     	next;
     }
     my ($section,$name) = ($1,$fname);
+    my $lang = "";
+       $lang = $1 if $t =~ m,^/([^/]+)/man\d/$,o;
 
     my @pieces = split(/\./, $name);
     my $ext = pop @pieces;
@@ -136,7 +138,8 @@ while (<IN>) {
     my $section_num = $fn_section;
     if (scalar @pieces && $section_num =~ s/^(\d).*$/$1/) {
 	my $bin = join(".", @pieces);
-	$manpage{$bin} = $file;
+	       $manpage{$bin} = [] unless $manpage{$bin};
+	push @{$manpage{$bin}}, { file => $file, lang => $lang };
 
 	# number of directory and manpage extension equal?
 	if ($section_num != $section) {
@@ -270,18 +273,27 @@ for my $f (sort keys %binary) {
 	if ($binary{$f} =~ m/X11/ or 
 	     ($link{$f} && $link{$f} =~ m/X11/)) { #Link to a X11 dir
 	    # yes. manpage in X11 too?
-	    if ($manpage{$f} =~ m/X11/) {
-		# ok.
-	    } else {
-		tag "manpage-for-x11-binary-in-wrong-directory", "$binary{$f} $manpage{$f}";
+	    for my $manp_info (@{$manpage{$f}}) {
+		if ($manp_info->{file} =~ m/X11/) {
+		    # ok.
+		} else {
+		    tag "manpage-for-x11-binary-in-wrong-directory", "$binary{$f} $$manp_info{$f}";
+		}
 	    }
+	
 	} else {
-	    # no. manpage in X11?
-	    if ($manpage{$f} =~ m/X11/) {
-		tag "manpage-for-non-x11-binary-in-wrong-directory", "$binary{$f} $manpage{$f}";
-	    } else {
-		# ok.
+	    for my $manp_info (@{$manpage{$f}}) {
+		# no. manpage in X11?
+		if ($manp_info->{file} =~ m/X11/) {
+		    tag "manpage-for-non-x11-binary-in-wrong-directory", "$binary{$f} $$manp_info{$f}";
+		} else {
+		    # ok.
+		}
 	    }
+	}
+
+	if (not grep { $_->{lang} eq "" } @{$manpage{$f}}) {
+	    tag "binary-without-english-manpage", "$f";
 	}
 
 #	unless (grep { $_ == $sect_by_binary{$f} } @{$sect_by_manpage{$f}}) {
