@@ -173,3 +173,11 @@ Info: The manual page references a directory that is specified
  .
  If you have to change file locations to abide by Debian Policy
  please also patch the man page to mention these new locations.
+
+Tag: binary-without-english-manpage
+Type: warning
+Info: Each binary in <tt>/usr/bin</tt>, <tt>/usr/sbin</tt>, <tt>/bin</tt>,
+ <tt>/sbin</tt> or <tt>/usr/games</tt> should have a manual page. You don't
+ provide an english, only a translated manpage. Since english is fallback,
+ shipping only a non-english man page leaves most users without a man page
+ at all.
