@@ -1,12 +1,14 @@
 E: manpages: bad-link-to-undocumented-manpage usr/share/man/man1/sbin-binary.1.gz
 E: manpages: empty-manual-page usr/X11R6/man/man1/rstartd.1x.gz
 E: manpages: empty-manual-page usr/X11R6/man/man6/X11R6-binary.man
+E: manpages: empty-manual-page usr/share/man/de/man1/binary-without-english-manpage.1
 E: manpages: empty-manual-page usr/share/man/man1/usr-bin-binary-alt.1.gz
 E: manpages: empty-manual-page usr/share/man/man1/usr-bin-binary.1
 E: manpages: empty-manual-page usr/share/man/man1/usr-sbin-binary.1.gz
 E: manpages: empty-manual-page usr/share/man/man6/usr-games-binary.6.gz
 E: manpages: manpage-has-wrong-extension usr/X11R6/man/man6/X11R6-binary.man
 E: manpages: manpage-not-compressed usr/X11R6/man/man6/X11R6-binary.man
+E: manpages: manpage-not-compressed usr/share/man/de/man1/binary-without-english-manpage.1
 E: manpages: manpage-not-compressed usr/share/man/man1/usr-bin-binary.1
 E: manpages: manpage-not-compressed-with-gzip usr/X11R6/man/man1/rstartd.1x.gz
 E: manpages: manpage-not-compressed-with-gzip usr/share/man/man1/usr-bin-binary-alt.1.gz
@@ -18,6 +20,8 @@ W: manpages source: ancient-standards-version 3.2.1
 W: manpages source: binary-nmu-debian-revision-in-source 4-0.0.1
 W: manpages source: changelog-should-mention-nmu
 W: manpages source: source-nmu-has-incorrect-version-number 4-0.0.1
+W: manpages: binary-without-english-manpage binary-without-english-manpage
+W: manpages: executable-not-elf-or-script ./usr/bin/binary-without-english-manpage
 W: manpages: executable-not-elf-or-script ./usr/bin/usr-bin-binary-alt
 W: manpages: executable-not-elf-or-script ./usr/sbin/usr-sbin-binary
 W: manpages: link-to-undocumented-manpage usr/share/man/man1/bin-binary.1.gz
